@@ -26,6 +26,7 @@ xfce4_keyboard_settings_CFLAGS = \
 	$(GLADE_CFLAGS) \
 	$(DBUS_GLIB_CFLAGS) \
 	$(LIBXKLAVIER_CFLAGS) \
+	$(LIBXKLAVIER_0_4_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(LIBXFCEGUI4_CFLAGS) \
 	$(LIBXFCE4KBD_PRIVATE_CFLAGS) \
@@ -42,6 +43,7 @@ xfce4_keyboard_settings_LDADD = \
 	$(GLADE_LIBS) \
 	$(DBUS_GLIB_LIBS) \
 	$(LIBXKLAVIER_LIBS) \
+	$(LIBXKLAVIER_0_4_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
 	$(LIBXFCEGUI4_LIBS) \
 	$(LIBXFCE4KBD_PRIVATE_LIBS) \
