@@ -6,6 +6,7 @@
 - Fix translation macros in settings helper (bug #5554).
 - Always restore the default displa scheme on startup (bug #5311).
 - Make sure --verbose is simmilar to --debug instead of --version
+- Fix compile-issue with libxklavier >= 4
 
 4.6.1
 =====
